<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:contentDescription="@string/trending_news_image"
            android:scaleType="centerCrop"
            android:src="@drawable/news_placeholder" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.7">

            <TextView
                android:id="@+id/newsPublishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="2018-10-19" />

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsPublishedAt"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorNewsTitle" />

            <ImageView
                android:id="@+id/authorIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/author_icon"
                android:layout_below="@id/newsTitle"
                android:layout_marginTop="2dp"
                android:src="@drawable/ic_edit" />

            <TextView
                android:id="@+id/newsAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/newsTitle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_toEndOf="@id/authorIcon"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                tools:text="Author" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_below="@id/newsAuthor"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/bookmark_news"
                    android:src="@drawable/ic_share" />

                <ImageButton
                    android:id="@+id/bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/bookmark_news"
                    android:src="@drawable/ic_bookmark_gray" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>